<resources>
    <string name="app_name">Amazonia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="link">Forgot Password?
        <a href="https://ps.w.org/under-construction-page/assets/screenshot-2.png?rev=1840052">Click here!</a>
    </string>
    <string name="emptyField">
        This field can not be empty
    </string>
    <string name="passwordFormatError">
        The password must contains at least eight characters,at least one number and both lower and uppercase letters
    </string>
    <string name="passwordModifyError">
        An error occurred during password updating, please check your internet connection
    </string>
    <string name="passwordModifySuccess">
        Password modify correctly!!
    </string>
    <string name="required">*Required</string>
    <string name="appTittle">AMAZONIA</string>
    <string name="quote">Embedded in these walls of green</string>
    <string name="folderName">plantFolder</string>
    <string name="signInWith">Sign In With:</string>
    <string name="facebook_app_id">527003928886027</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="saveInGallery">Save Image</string>
    <string name="identify">Identify</string>
    <string name="retry">RETRY</string>
    <string name="cancel">cancel</string>
    <string name="accept">Add to species</string>
    <string name="whatOrganIs">what part of the plant is:</string>
    <string name="acceptFilters">Accept</string>
    <string name="filePath">/storage/emulated/0/Pictures/plantFolder</string>
    <string name="passwordAsteriks">*************</string>
    <string name="aboutTheApp">This application is designed for nature lovers, in it you can store images of your plants, as well as identify the new species you find and add them to your list of species, enjoy this app You\'re in the Amazon
    </string>
    <string name="aboutTheAppTitle"> ABOUT THE APP</string>
    <string name="aboutUs">Follow me in social media</string>
    <string name="image">IMAGE</string>
    <string name="showConnectionError">Something was wrong check your internet connection</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="notPhotoYet">Press retry to take a photo</string>
    <string name="imageDeleteError">something went wrong during image deletion</string>
    <string name="imageDeleteCorrectly">image/s  deleted !!</string>
    <string name="wrong_credentials">wrong credentials invalid username or password</string>
    <string name="addSomeSpecies">Your list is empty, add some species!!</string>
    <string name="message_storage">Message</string>
    <string name="permissions_not_granted">Don\'t have read permisson</string>
    <string name="permissions_granted">you have granted permissions</string>
    <string name="specie_added">Specie added correctly!!</string>
    <string name="logged_in">Successfully logged in</string>
    <string name="null_value">null</string>
    <string name="default_image">default_image</string>
    <string name="unknow_value">Unknow</string>
</resources>