<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99000000"
    tools:context=".ui.view.Fragments.UserDetailsFragment"
    android:orientation="vertical">
    <TextView
        android:id="@+id/txtUserDetails"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:background="@drawable/white_background"
        android:fontFamily="@font/averia_gruesa_libre"
        android:padding="10dp"
        android:text="USER DETAILS"
        android:textSize="20dp"
        android:layout_gravity="center"
        tools:layout_editor_absoluteX="127dp"
        tools:layout_editor_absoluteY="15dp"></TextView>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/white_background"
        android:fontFamily="@font/averia_gruesa_libre"
        android:padding="10dp"
        android:text="Email:"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="117dp"
        tools:layout_editor_absoluteY="88dp"></TextView>


    <TextView
        android:id="@+id/txtUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:background="@drawable/white_background"
        android:fontFamily="@font/averia_gruesa_libre"
        android:padding="10dp"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="204dp"
        tools:layout_editor_absoluteY="88dp"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/white_background"
        android:fontFamily="@font/averia_gruesa_libre"
        android:padding="10dp"
        android:text="Password:"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="152dp"></TextView>

    <TextView
        android:id="@+id/txtUserPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:background="@drawable/white_background"
        android:fontFamily="@font/averia_gruesa_libre"
        android:padding="10dp"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="204dp"
        tools:layout_editor_absoluteY="152dp"></TextView>
        <EditText
            android:id="@+id/edUserPassword"
            android:padding="10dp"
            android:visibility="gone"
            android:background="@drawable/white_background"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:maxLength="11"
            android:layout_width="140dp"
            android:layout_height="40dp"></EditText>

    <ImageButton
        android:id="@+id/imgbEdit"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@drawable/white_background"
        android:src="@drawable/ic_baseline_edit"
        tools:layout_editor_absoluteX="255dp"
        tools:layout_editor_absoluteY="159dp"></ImageButton>
    </LinearLayout>
    <Button
        android:id="@+id/btnSave"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_save"
        android:text="Save"
        android:fontFamily="@font/averia_gruesa_libre"
        android:backgroundTint="#22ba64"
        android:visibility="gone"
        android:layout_width="150dp"
        android:layout_height="55dp"></Button>
    <androidx.cardview.widget.CardView
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:padding="20dp"
        app:cardElevation="55dp"
        app:cardCornerRadius="15dp"
        android:background="@drawable/white_background_with_border"
        android:layout_width="match_parent"
        android:layout_marginBottom="75dp"
        android:paddingBottom="25dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content">
            <TextView
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:textSize="35dp"
                android:fontFamily="@font/averia_gruesa_libre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aboutTheAppTitle"></TextView>
                <ImageView
                    android:layout_gravity="left"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/draw_plant"
                    ></ImageView>
            </LinearLayout>
            <TextView
                android:padding="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:textSize="20dp"
                android:fontFamily="@font/averia_gruesa_libre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aboutTheApp">
            </TextView>
            <TextView
                android:padding="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:textSize="20dp"
                android:layout_gravity="center"
                android:fontFamily="@font/averia_gruesa_libre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aboutUs">
            </TextView>
            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageButton
                    android:id="@+id/instaUrlButton"
                    android:layout_width="40dp"
                    android:layout_marginRight="25dp"
                    android:background="@drawable/instagram_logo"
                    android:layout_height="40dp"></ImageButton>
                <ImageButton
                    android:id="@+id/facebookUrlButton"
                    android:layout_width="40dp"
                    android:layout_marginRight="25dp"
                    android:background="@drawable/facebook_logo"
                    android:layout_height="40dp"></ImageButton>
                <ImageButton
                    android:id="@+id/twitterUrlButton"
                    android:layout_width="50dp"
                    android:background="@drawable/twitter_logo"
                    android:layout_height="50dp"></ImageButton>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/logOutButton"
        android:layout_gravity="center"
        android:drawableLeft="@drawable/ic_log_out"
        android:text="Log Out"
        android:fontFamily="@font/averia_gruesa_libre"
        android:backgroundTint="#c22d2d"
        android:layout_width="150dp"
        android:layout_height="55dp"></Button>

</LinearLayout>